added my personal photo
added my personal photo instead of the  placeholderimage

--- a/src/sass/components/_images.scss
+++ b/src/sass/components/_images.scss
@@ -13,7 +13,7 @@
 }
 .head-shot {
   display: block;
-  background-image: url("../../assets/zoro-pic.png");
+  background-image: url("../../assets/IMG_3652.png");
   background-size: contain;
   background-position: center;
   height: 500px;
