--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,7 @@
 
 .head-shot {
   display: block;
-  background-image: url("../../assets/zoro-pic.png");
+  background-image: url("../../assets/IMG_3652.png");
   background-size: contain;
   background-position: center;
   height: 500px;
@@ -22,8 +22,8 @@
 }
 
 img {
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
 }
 
 .head-img {
@@ -114,6 +114,7 @@ html {
 }
 
 label {
+  font-size: xx-large;
   text-align: center;
   padding: 0;
   margin: 0;
@@ -218,8 +219,8 @@ label {
     grid-auto-flow: row;
   }
   .projects img, .cards img, .info img {
-    width: 400px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     margin: auto;
     height: 100%;
     width: 100%;
