--- a/src/sass/components/_forms.scss
+++ b/src/sass/components/_forms.scss
@@ -3,7 +3,7 @@
 /* NEW FOOTER CONTACT FORM */
 .wrapper{
     margin:auto;
-    width: auto;
+    width: 90vw;
     border-radius: 5px;
     box-shadow: 10px 10px 10px rgba(0,0,0,0.05);
     header {
